# ragpilot

./: .gitignore  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md
.github/: FUNDING.yml
bench/: baseline.json  common.py  mcp_client.py  test1_baseline.py  test2_ab.py
benchmark/: report.md  results.json  run_benchmark.sh  scenarios.json
benchmark/raw/: context_bundle_context_large_task.json  context_bundle_context_medium_task.json  context_bundle_context_small_task.json  doctor.txt  env.txt  impact_src_config_rs.json  impact_src_indexer_rs.json  impact_src_store_qdrant_rs.json  index_init.txt  index_update_touch.txt  mcp_tools_list.json  measurements.jsonl  nav_QdrantStore.json  nav_chunk_text.json  nav_cmd_status.json  nav_context_bundle.json  nav_index_project.json  rag_search_search_config_loading.json  rag_search_search_qdrant_store.json  skeleton_src_config_rs.txt  skeleton_src_indexer_rs.txt  skeleton_src_mcp_tools_context_rs.txt  status_before.txt
docs/: SECURITY_MODEL.md  USAGE.md
queries/c/: imports.scm
queries/csharp/: imports.scm
queries/go/: imports.scm
queries/java/: imports.scm
queries/javascript/: imports.scm
queries/php/: imports.scm
queries/python/: imports.scm
queries/rust/: calls.scm  imports.scm  symbols.scm
queries/typescript/: tags.scm
src/: agents.rs  config.rs  indexer.rs  lib.rs  main.rs  orchestrator.rs  semantic_diff.rs  skeleton.rs  tokens.rs  watcher.rs  wizard.rs
src/embedder/: api.rs  local.rs  mod.rs
src/mcp/: mod.rs  protocol.rs
src/mcp/tools/: context.rs  impact.rs  index.rs  mod.rs  nav.rs  rag.rs  review.rs
src/parser/: mod.rs  regex_parser.rs  tree_sitter_parser.rs
src/store/: impact_index.rs  mod.rs  project_tree.rs  qdrant.rs  sqlite.rs  symbol_graph.rs
