[package]
name = "ragpilot"
version = "0.4.0"
edition = "2021"
description = "Token-efficient, local-first code intelligence layer for AI coding agents over the Model Context Protocol (MCP)"
license = "MIT"
authors = ["Ali Kaya <alikayaa@gmail.com>"]
repository = "https://github.com/alikaya/ragpilot"
readme = "README.md"
keywords = ["mcp", "rag", "code-search", "embeddings", "ai-agents"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "ragpilot"
path = "src/main.rs"

[dependencies]
# Async
tokio       = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization (MCP JSON-RPC + config)
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"

# Embedding — Local ONNX
fastembed   = "4"

# HTTP (API embedding)
reqwest     = { version = "0.12", features = ["json"] }

# Qdrant
qdrant-client = "1"

# File operations
walkdir  = "2"
glob     = "0.3"
md5      = "0.7"

# File watching
notify   = "6"

# SQLite (SymbolGraph + ProjectTree + ImpactIndex)
rusqlite = { version = "0.31", features = ["bundled"] }

# Regex parsing (symbol / import extraction)
regex    = "1"

# Utilities
anyhow             = "1"
uuid               = { version = "1", features = ["v4"] }
chrono             = { version = "0.4", features = ["serde"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs               = "5"
indicatif          = "0.17"
colored            = "2"
tiktoken-rs        = "0.6"
tree-sitter = "0.26.9"
tree-sitter-rust = "0.24.2"
streaming-iterator = "0.1.9"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-c = "0.24.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-ruby = "0.23.1"
tree-sitter-php = "0.24.2"
